[gd_scene load_steps=2 format=3 uid="uid://cbolvgjoi560k"]

[ext_resource type="Script" path="res://scenes/customer/customer_manager.gd" id="1_u0teh"]

[node name="CustomerManager" type="Node2D"]
script = ExtResource("1_u0teh")
time_range = Vector2i(21, 30)
metadata/_edit_vertical_guides_ = [899.0]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EmergencyTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EmergencyTimer" to="." method="_on_emergency_timer_timeout"]
